[package]
name = "kvmide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
rdev = { version="0.5.3",features = ["unstable_grab"] }
tokio = { version = "1.29.1", features = ["full"] }
