[package]
name = "kvmide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
rdev = { version = "0.5.3", features = ["unstable_grab", "serialize"] }
tokio = { version = "1.29.1", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
tokio-serde = { version = "0.8.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.28"
local-ip-address = "0.5.3"
anyhow = "1.0.71"
thiserror = "1.0.43"
